resources/media-store/jackett/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jackett
  name: jackett
spec:
  ports:
    - name: web
      port: 9117
      protocol: TCP
      targetPort: 9117
  selector:
    app: jackett
  type: ClusterIP
